[gd_scene load_steps=2 format=3 uid="uid://cmjgbw3biavvw"]

[ext_resource type="Script" path="res://GroupVariable.gd" id="1_muni7"]

[node name="Variable" type="PanelContainer"]
offset_right = 1152.0
offset_bottom = 80.0
script = ExtResource("1_muni7")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Name" type="LineEdit" parent="Margin/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Var Name"
caret_blink = true
caret_blink_interval = 0.5

[node name="Remove" type="Button" parent="Margin/VBox/HBox"]
self_modulate = Color(0.988235, 0.513726, 0.513726, 1)
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="HBox2" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="NumberEdit" type="SpinBox" parent="Margin/VBox/HBox2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
custom_arrow_step = 1.0

[node name="StringEdit" type="LineEdit" parent="Margin/VBox/HBox2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
select_all_on_focus = true
caret_blink = true
caret_blink_interval = 0.5

[node name="BoolEdit" type="CheckBox" parent="Margin/VBox/HBox2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "True"
alignment = 1

[node name="Values" type="OptionButton" parent="Margin/VBox/HBox2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Int"
popup/item_0/id = 0
popup/item_1/text = "Float"
popup/item_1/id = 1
popup/item_2/text = "Text"
popup/item_2/id = 2
popup/item_3/text = "Bool"
popup/item_3/id = 3

[connection signal="text_changed" from="Margin/VBox/HBox/Name" to="." method="NameChange"]
[connection signal="pressed" from="Margin/VBox/HBox/Remove" to="." method="Remove"]
[connection signal="value_changed" from="Margin/VBox/HBox2/NumberEdit" to="." method="SetValue"]
[connection signal="text_changed" from="Margin/VBox/HBox2/StringEdit" to="." method="SetValue"]
[connection signal="toggled" from="Margin/VBox/HBox2/BoolEdit" to="." method="SetValue"]
[connection signal="item_selected" from="Margin/VBox/HBox2/Values" to="." method="SetType"]
